--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["shadcn-rs", "shadcn-showcase"]
+members = ["shadcn-rs", "shadcn-icons", "shadcn-showcase"]
 resolver = "2"
 
 [workspace.package]
