--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["wasm", "web-programming", "gui"]
 [workspace.dependencies]
 # Core Yew and WASM dependencies
 yew = { version = "0.21", features = ["csr"] }
+yew-router = "0.18"
 wasm-bindgen = "0.2"
 web-sys = "0.3"
 gloo = "0.11"
@@ -25,6 +26,9 @@ chrono = { version = "0.4", features = ["wasmbind"] }
 # Utilities
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+# Async runtime for WASM
+wasm-bindgen-futures = "0.4"
 
 # Development dependencies
 wasm-bindgen-test = "0.3"
