--- a/shadcn-rs/Cargo.toml
+++ b/shadcn-rs/Cargo.toml
@@ -20,6 +20,7 @@ web-sys = { workspace = true, features = [
     "Window",
     "Document",
     "Element",
+    "DomRect",
     "HtmlElement",
     "HtmlInputElement",
     "HtmlTextAreaElement",
